--- a/Music/.classpath
+++ b/Music/.classpath
@@ -1,7 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-15"/>
 	<classpathentry kind="src" path="src/main/java"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8">
+		<attributes>
+			<attribute name="module" value="true"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="C:/Users/kopo/Desktop/mysql-connector-java-8.0.24/mysql-connector-java-8.0.24.jar">
+		<attributes>
+			<attribute name="module" value="true"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jst.server.core.container/org.eclipse.jst.server.tomcat.runtimeTarget/Apache Tomcat v9.0">
 		<attributes>
 			<attribute name="owner.project.facets" value="jst.web"/>
@@ -9,5 +18,12 @@
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.web.container"/>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
+	<classpathentry kind="lib" path="C:/Users/kopo/Desktop/sel/libs/byte-buddy-1.8.15.jar"/>
+	<classpathentry kind="lib" path="C:/Users/kopo/Desktop/sel/libs/commons-exec-1.3.jar"/>
+	<classpathentry kind="lib" path="C:/Users/kopo/Desktop/sel/libs/guava-25.0-jre.jar"/>
+	<classpathentry kind="lib" path="C:/Users/kopo/Desktop/sel/libs/okhttp-3.11.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/kopo/Desktop/sel/libs/okio-1.14.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/kopo/Desktop/sel/client-combined-3.141.59.jar"/>
+	<classpathentry kind="lib" path="C:/Users/kopo/Desktop/jsoup-1.13.1.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
